Fix spacing on upcoming page

--- a/src/scss/_layoutUpcoming.scss
+++ b/src/scss/_layoutUpcoming.scss
@@ -9,15 +9,16 @@ $extraTextBlurbSpaceBottom: 3%;
 	}
 
 	.image {
-		padding: $spacing + $extraSpace;
+		padding-top: $spacing + $extraSpace;
+		padding-bottom: $spacing + $extraSpace;
 	}
 
 	.textBlurb {
 		background-color: #7ba7ba;
-		// margin: ($spacing + $extraTextBlurbSpaceTop) ($spacing + $extraSpace) ($spacing + $extraTextBlurbSpaceBottom) ($spacing + $extraSpace);
-		margin: 0 ($spacing + $extraSpace) ($spacing + $extraTextBlurbSpaceBottom) ($spacing + $extraSpace);
+		margin-top: 0;
+		margin-bottom: $spacing + $extraTextBlurbSpaceBottom;
 		padding: 0 $textBlurbPadding + $extraSpace;
-		width: $textBlurbWidth - $extraSpace;
+		width: $textBlurbWidth - $extraSpace * 2;
 	}
 
 	.textOverlay,
@@ -30,12 +31,12 @@ $extraTextBlurbSpaceBottom: 3%;
 	.textOverlay {
 		// margin-top: -50px;
 		margin-top: 15px;
-		margin-left: -20px;
+		// margin-left: -20px;
 	}
 	.completionDate {
 		// margin-top: -65px;
 		margin-top: -55px;
-		margin-right: 20px;
+		// margin-right: 20px;
 		display: block;
 		text-align: right;
 		// font-size: 0.9em;
